--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Google Gemini API Key
-GEMINI_API_KEY=AIzaSyDWVqVlUoDCExk9fT4VCIajcoSaLdEsEKg
+GEMINI_API_KEY="enter the key"
 OPENAI_API_KEY=jdafjbsjd9d6d6dasjb
 # Add other environment variables as needed
